fix: change navbar collapse to offcanvas (#44)
* fix: change collapse to offcanvas

* Display offcanvas below header

* Hide offcanvas on non-mobile

* Fix undefined className in Sprite

* Display nav item title on mobile

* Adapt no unlocked wallet nav

* Improve nav toggle button

* Remove dead code

--- a/src/index.css
+++ b/src/index.css
@@ -202,6 +202,73 @@ body,
   flex-direction: column;
 }
 
+#mainNav {
+  z-index: 1050;
+}
+
+#mainNav,
+.offcanvas-header {
+  height: 76px;
+}
+
+#mainNavToggle {
+  --line-thickness: 2px;
+  --transition-easing: ease-in-out;
+  --transition-duration: 0.25s;
+  --button-width: 40px;
+  --button-height: 40px;
+  --button-padding: 7px;
+  --icon-size: 1.5rem;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex: 0 0 var(--button-width);
+  height: var(--button-height);
+  border: 0;
+  padding: var(--button-padding);
+  box-shadow: none;
+  color: inherit;
+}
+
+#mainNavToggle span {
+  position: relative;
+  display: inline-block;
+  width: calc(var(--button-width) - var(--button-padding) * 2);
+  height: calc(var(--button-height) - (var(--button-padding) * 2) - (var(--line-thickness) * 4));
+  border-top: var(--line-thickness) solid;
+  border-bottom: var(--line-thickness) solid;
+  border-color: currentColor !important;
+  font-size: 0;
+  transition: all var(--transition-duration) var(--transition-easing);
+}
+
+#mainNavToggle span:before,
+#mainNavToggle span:after {
+  position: absolute;
+  display: block;
+  content: '';
+  width: 100%;
+  height: var(--line-thickness);
+  top: 50%;
+  left: 50%;
+  background: currentColor;
+  transform: translate(-50%, -50%);
+  transition: transform var(--transition-duration) var(--transition-easing);
+}
+
+#mainNavToggle:not(.collapsed) span {
+  border-color: transparent !important;
+}
+
+#mainNavToggle:not(.collapsed) span:before {
+  transform: translate(-50%, -50%) rotate(45deg);
+}
+
+#mainNavToggle:not(.collapsed) span:after {
+  transform: translate(-50%, -50%) rotate(-45deg);
+}
+
 main {
   flex: 1;
 }
@@ -216,7 +283,7 @@ main {
 
 /* Start Navbar Styles */
 
-.center-nav-link {
+#mainNav .nav-link {
   font-weight: 600 !important;
 }
 
@@ -239,6 +306,11 @@ main {
   .center-nav-link.active {
     padding: 12px 0 10px 0 !important;
     border-bottom: 2px solid black;
+  }
+
+  .offcanvas,
+  .offcanvas-backdrop {
+    display: none;
   }
 }
 
@@ -331,4 +403,8 @@ main {
 
 :root[data-theme='dark'] code {
   color: var(--bs-gray-300);
+}
+
+:root[data-theme='dark'] .offcanvas {
+  background-color: var(--bs-gray-900);
 }
